--- a/MaykBrito/package.json
+++ b/MaykBrito/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "html-pdf": "^3.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
