--- a/MaykBrito/package.json
+++ b/MaykBrito/package.json
@@ -4,8 +4,8 @@
   "description": "Gerando PDF com NodeJS.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server.js && livereload"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,9 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "html-pdf": "^3.0.1"
+    "html-pdf": "^3.0.1",
+    "livereload": "^0.9.3",
+    "puppeteer": "^21.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
